@@ -733,7 +733,7 @@ function onEscape()
     if (!hasMode(MODE_ESCAPE_ONE_KEY))
     {
         setCurrentMode(MODE_NORMAL);
-        BrowserStop();
+        // BrowserStop(); -> moved to <C-c>
         hah.disableHahMode();
         focusContent(true, true);
     }
